# cpr-hello-world

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml
